# vkCelShadingRenderer

./: .gitignore  CMakeLists.txt  README.md  glsl_generator.cpp  main.cpp  vkMMD.cpp
imgui/: CMakeLists.txt
pch/: config.h  config.h.in  nonCopyable.h  vkGlobal.cpp  vkGlobal.h  yic_pch.h  yic_template.h
src/: vk_App.cpp  vk_App.h  vk_context.cpp  vk_context.h  vk_rhi.cpp  vk_rhi.h
src/shaders/: cs.frag  fragment.frag  tex.vert  vertex.vert
src/shaders/Light/: f_shadowMap.frag  v_shadowMap.vert
src/shaders/fog/: f_fog.frag  v_fog.vert
src/shaders/post/: f_depth.frag  v_depth.vert
src/shaders/vkEnvironment/: fSky.frag  vSky.vert
src/shaders/vkImgui/: fImgui.frag  vImgui.vert
src/shaders/vkModel/: f_basic.frag  v_basic.vert
src/shaders/vkPmx/: f_mmd.frag  mmdfrag_backup.txt  v_mmd.vert
src/shaders/vkPmx/FFd/: f_xyz.frag  v_ffd.vert  v_highlight.vert  v_ray.vert  v_xyz.vert
src/shaders/vkPost/: f_offscreen.frag  v_offscreen.vert
src/shaders/vkRay/: common_ray.glsl  gen_ray.glsl  gen_ray.rgen  hit_ray.rchit  host_device.h  miss_ray.rmiss  shadowMiss_ray.rmiss  wavefront.glsl
src/shaders/vot/: basicShader.cpp  basicShader.h  customMath.cpp  customMath.h  genGlslBase.cpp  genGlslBase.h  rayTracingShader.cpp  rayTracingShader.h  shader.vot  vkIdGenerator.cpp  vkIdGenerator.h
src/vkH/: editorimgui.ini
src/vkH/configurationRender/: vkRenderTaskQueue.cpp  vkRenderTaskQueue.h
src/vkH/configurationResource/: vkResManager.cpp  vkResManager.h  vkResModel.cpp  vkResModel.h  vkResourceBase.cpp  vkResourceBase.h
src/vkH/editor/: imgui.ini  modelTransformManager.cpp  modelTransformManager.h  vkImgui.cpp  vkImgui.h  vkImguiTaskQueue.cpp  vkImguiTaskQueue.h  vkImgui_context.cpp  vkImgui_context.h
src/vkH/editor/terminal/: ImGuiTerminal.cpp  ImGuiTerminal.h
src/vkH/environment/: vkSkybox.cpp  vkSkybox.h
src/vkH/illuminant/: directionalLight.cpp  directionalLight.h  lightBase.cpp  lightBase.h  lightManager.cpp  lightManager.h
src/vkH/json/: BaseSetting.json  baseSetting.cpp  baseSetting.h  vkProject.cpp  vkProject.h
src/vkH/ke_q/: file_operation.h  vk_allocator.cpp  vk_allocator.h
src/vkH/log/: Log.cpp  Log.h
src/vkH/miku/: context_vkinit.cpp  context_vkinit.h  rhi_co.cpp  rhi_co.h  vkIdGenerator.cpp  vkIdGenerator.h  vk_base.cpp  vk_base.h  vk_fn.cpp  vk_fn.h  vk_struct.h
src/vkH/model/: load.cpp  load.h  modelData.h  modelManager.cpp  modelManager.h
src/vkH/niLou/: vkCamera.cpp  vkCamera.h  vkDescriptor.cpp  vkDescriptor.h  vkImage.cpp  vkImage.h  vkPipeline.cpp  vkPipeline.h  vkRenderPass.cpp  vkRenderPass.h  vkSwapchain.cpp  vkSwapchain.h
src/vkH/pmx/: ffd.cpp  ffd.h  pmx_context.cpp  pmx_context.h  pmx_header.cpp  pmx_header.h  pmx_material.cpp  pmx_material.h
src/vkH/postProcessing/: directionShadowMapManager.cpp  directionShadowMapManager.h  renderDepth.cpp  renderDepth.h  shadowMap.cpp  shadowMap.h  vk_offscreen.cpp  vk_offscreen.h
src/vkH/rayTracing/: rayTracingKHR.cpp  rayTracingKHR.h
src/vkH/scene/: vkMeshes.cpp  vkMeshes.h  vkScene.cpp  vkScene.h
src/vkH/vkCore/: alignment.cpp  alignment.h  vkShader.cpp  vkShader.h
src/vkH/vkPmx/: vkPmxModel.cpp  vkPmxModel.h  vk_saba.cpp  vk_saba.h  vk_saba2.cpp  vk_saba2.h
src/vkH/volumeFog/: volumeFog.cpp  volumeFog.h
src/vkM/centralizedTaskSystem/: vkCommon.h  vkEvent.cpp  vkEvent.h  vkTask.h  vkTaskFlow.cpp  vkTaskFlow.h  vkTasker.cpp  vkTasker.h  vkThread.cpp  vkThread.h  vkWorkQueue.cpp  vkWorkQueue.h
src/vkM/vkContext/: vkRayTracing.cpp  vkRayTracing.h
src/vkM/vkInit/: vk_init.cpp  vk_init.h  vk_window.cpp  vk_window.h
